added filter by category for expenses